uefi-macros/tests/ui/fail/entry_bad_async.stderr
error: Entry method should not be async
 --> tests/ui/fail/entry_bad_async.rs:8:1
  |
8 | async fn main(_handle: Handle, _st: SystemTable<Boot>) -> Status {
  | ^^^^^
